--- a/index.html
+++ b/index.html
@@ -33,93 +33,23 @@
 				<section>
 					<section>
 						<h2>Why</h2>
-						<img style="width:30%" src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png"/>
+                        <blockquote>Any fool can write a code that computers can understand. Good programmers write code that humans can understand.</blockquote>
+                        <ul>
+                            <li>Readability</li>
+                            <li>Structure</li>
+                            <li>Collaboration</li>
+                            <li>Consistency</li>
+                            <li>Easy Adaption</li>
+                            <li>Professionalism</li>
+                        </ul>
 					</section>
                     <section>
-                        <h2>Was ist ein Branch?</h2>
-                        <img style="width:50%" src="https://www.atlassian.com/git/images/tutorials/collaborating/using-branches/hero.svg"/>
+                        <h2>How?</h2>
                         <ul>
-                            <li>Ein Branch ist ein unabhängiger Entwicklungszweig</li>
-                            <li>Eigene Working Directory</li>
-                            <li>Eigene Staging Area</li>
-                            <li>Eigene History</li>
+                            <li><a href="https://www.odoo.com/documentation/12.0/reference/guidelines.html" target="_blank">Odoo Guidelines</a></li>
+                            <li><a href="https://realpython.com/python-pep8/" target="_blank">PEP 8</a></li>
                         </ul>
                     </section>
-                    <section>
-                        <h2>Master-Branch</h2>
-                        <p>Master Branch ist standartmäßig der Haupt- und Default-Branch, man könnte auch trunk (Stamm) sagen. </p>
-                    </section>
-                    <section>
-                        <h2>Warum mehr als ein Branch?</h2>
-                        <ul>
-                            <li>Strukturierung von Aufgaben und Projektständen</li>
-                            <li>Kollaboratives Arbeiten</li>
-                            <li>Release-Management und Historie</li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h2>Wie? Wann? Wo? lege ich Branches an?</h2>
-						<h3>Verschiedene Branch <a href="https://www.atlassian.com/git/tutorials/comparing-workflows/" target="_blank">Modelle</a></h3>
-                        <ul>
-                            <li>Centralized Workflow</li>
-                            <li>Feature Branch Workflow</li>
-                            <li>Gitflow Workflow</li>
-							<li>Forking Workflow</li>
-                        </ul>
-                    </section>
-				</section>
-				<section>
-                    <section>
-                        <h2>Gitflow</h2>
-                        <img style="width:100%" src="https://www.atlassian.com/git/images/tutorials/collaborating/comparing-workflows/gitflow-workflow/01.svg"/>
-                    </section>
-					<section>
-						<img style="width:50%" src="http://i.imgur.com/cXclkJJ.gif"/>
-					</section>
-                    <section>
-                        <h2>Fortlaufende Branches</h2>
-                        <img style="width:100%" src="https://www.atlassian.com/git/images/tutorials/collaborating/comparing-workflows/gitflow-workflow/02.svg"/>
-                    </section>
-					<section>
-						<h2>Feature Branches</h2>
-						<img style="width:100%" src="https://www.atlassian.com/git/images/tutorials/collaborating/comparing-workflows/gitflow-workflow/03.svg"/>
-					</section>
-					<section>
-						<h2>Release Branches</h2>
-						<img style="width:90%" src="https://www.atlassian.com/git/images/tutorials/collaborating/comparing-workflows/gitflow-workflow/04.svg"/>
-					</section>
-					<section>
-						<h2>Hotfix Branches</h2>
-						<img style="width:80%" src="https://www.atlassian.com/git/images/tutorials/collaborating/comparing-workflows/gitflow-workflow/05.svg"/>
-					</section>
-				</section>
-				<section>
-					<h2>Ausblick</h2>
-					<ul>
-						<li>Testautomatisierung</li>
-						<li>Continuous Integration</li>
-						<li>One Click Deployment</li>
-						<li>Continuous Delivery</li>
-					</ul>
-					<p>
-						<img style="width: 10%" src="https://wiki.jenkins-ci.org/download/attachments/2916393/logo.png?version=1&modificationDate=1302753947000"/>
-					</p>
-				</section>
-				<section>
-					<h2>Fragen</h2>
-					<ul>
-						<li>Ist Gitflow sinnvoll für ein kleines Entwicklerteam?</li>
-						<li>Verhältnis Code/Konfiguration?</li>
-					</ul>
-				</section>
-				<section>
-					<h2>Quellen</h2>
-					<ul>
-						<li><a href="https://www.atlassian.com/git/tutorials/what-is-version-control" target="_blank">Attlassian Git Tutorial</a></li>
-						<li><a href="https://wiki.jenkins-ci.org/display/JENKINS/Logo" target="_blank">Wiki Jenkins CI</a></li>
-						<li><a href="https://git-scm.com/" target="_blank">GIT</a></li>
-					</ul>
-				</section>
 			</div>
 		</div>
 
