--- a/index.html
+++ b/index.html
@@ -30,26 +30,27 @@
 				<section>
 					<h1>Coding Style</h1>
 				</section>
-				<section>
-					<section>
-						<h2>Why</h2>
-                        <blockquote>Any fool can write a code that computers can understand. Good programmers write code that humans can understand.</blockquote>
-                        <ul>
-                            <li>Readability</li>
-                            <li>Structure</li>
-                            <li>Collaboration</li>
-                            <li>Consistency</li>
-                            <li>Easy Adaption</li>
-                            <li>Professionalism</li>
-                        </ul>
-					</section>
-                    <section>
-                        <h2>How?</h2>
-                        <ul>
-                            <li><a href="https://www.odoo.com/documentation/12.0/reference/guidelines.html" target="_blank">Odoo Guidelines</a></li>
-                            <li><a href="https://realpython.com/python-pep8/" target="_blank">PEP 8</a></li>
-                        </ul>
-                    </section>
+                <section>
+                    <h2>Why</h2>
+                    <blockquote>Any fool can write a code that computers can understand. Good programmers write code that humans can understand.</blockquote>
+                    <ul>
+                        <li>Readability</li>
+                        <li>Structure</li>
+                        <li>Collaboration</li>
+                        <li>Consistency</li>
+                        <li>Easy Adaption</li>
+                        <li>Professionalism</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>How?</h2>
+                    <ul>
+                        <li><a href="https://www.odoo.com/documentation/12.0/reference/guidelines.html" target="_blank">Odoo Guidelines</a></li>
+                        <li><a href="https://realpython.com/python-pep8/" target="_blank">PEP 8</a></li>
+                        <br/>
+                        <img style="width:50%" src="pycharm.png"/>
+                    </ul>
+                </section>
 			</div>
 		</div>
 
