--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</section>
                 <section>
                     <h2>Why</h2>
-                    <blockquote>Any fool can write a code that computers can understand. Good programmers write code that humans can understand.</blockquote>
+                    <blockquote>"Any fool can write a code that computers can understand. Good programmers write code that humans can understand." - Martin Fowler</blockquote>
                     <ul>
                         <li>Readability</li>
                         <li>Structure</li>
