--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li><a href="https://www.odoo.com/documentation/12.0/reference/guidelines.html" target="_blank">Odoo Guidelines</a></li>
                         <li><a href="https://realpython.com/python-pep8/" target="_blank">PEP 8</a></li>
                         <br/>
-                        <img style="width:50%" src="pycharm.png"/>
+                        <img src="pycharm.png"/>
                     </ul>
                 </section>
 			</div>
