--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="slides">
 				<section>
 					<h1>Coding Style</h1>
-                    <img src="http://home.tamk.fi/~jaalto/course/coding-style/pic/comics-geekandpoke-00-all.png"/>
+                    <img style="width: 80%;" src="http://home.tamk.fi/~jaalto/course/coding-style/pic/comics-geekandpoke-00-all.png"/>
 				</section>
                 <section>
                     <h2>Why</h2>
